# IMDB-data-visualization

./: Entrega.txt  README.md  imdb_analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: imdb_analysis-checkpoint.ipynb
