[tool.poetry]
name = "imdb-data-visualization"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks", "Gustavo Silva"]
readme = "README.md"
packages = [{include = "imdb_data_visualization"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
seaborn = "^0.12.2"
plotly = "^5.17.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
