[tool.poetry]
name = "imdb-data-visualization"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks", "Gustavo Silva"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"
plotly = "^5.17.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
nbformat = "^5.9.2"
scikit-learn = "^1.3.1"
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
